# BC250-Manager

./: .gitignore  README.md  esphome-waveshare-espcontrol.yaml  pyproject.toml
devices/waveshare-esp32-p4-wifi6-7b/: packages.yaml
devices/waveshare-esp32-p4-wifi6-7b/device/: device.yaml  fonts.yaml  lvgl.yaml  network_coprocessor.yaml
src/bc250_manager/: __init__.py  __main__.py  main.py
src/bc250_manager/modules/: __init__.py  base.py  dashboard.py  disks.py  emudeck.py  settings.py  steam.py
src/bc250_manager/services/: __init__.py  disk_manager.py
src/bc250_manager/ui/: __init__.py  main_window.py
tests/: test_disk_manager.py
