[project]
name = "bc250-manager"
version = "0.1.0"
description = "Desktop manager app for BC250 workflows."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "PySide6>=6.8",
]

[project.scripts]
bc250-manager = "bc250_manager.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/bc250_manager"]
